--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "proxy": "http://localhost:8765",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toast-notifications": "^2.4.4",
     "react-toastify": "^7.0.4",
+    "redux": "^4.2.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
